--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -26,11 +26,12 @@ dotenv = "0.15.0"
 serde = "1.0.145"
 envy = "0.4.2"
 serde_with = { version = "2.0.1", features = ["base64"] }
+redb = "0.9.0"
 
 [features]
-default = ["postgres_storage", "near", "near-indexer-global"]
+default = ["postgres_storage", "near", "near-indexer-explorer"]
 evm = ["web3"]
 near = []
 postgres_storage = ["sqlx"]
-near-indexer-global = []
+near-indexer-explorer = []
 near-indexer-framework = ["near-indexer"]
