WIP Merkle tree

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
-#    "relayer",
+    "relayer-server",
     "indexer",
+    "sparse-merkle-tree",
 ]
 default-members = [
     "indexer",
