--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.5.16"
+axum = "0.6.2"
 tokio = { version = "1", features = ["full"] }
 envconfig = "0.10.0"
 tracing = "0.1.37"
@@ -26,12 +26,12 @@ dotenv = "0.15.0"
 serde = "1.0.145"
 envy = "0.4.2"
 serde_with = { version = "2.0.1", features = ["base64"] }
-redb = "0.9.0"
+reqwest = "0.11.13"
 
 [features]
-default = ["postgres_storage", "near", "near-indexer-explorer"]
-evm = ["web3"]
+default = ["postgres_storage", "near", "near-indexer-framework"]
+evm = ["dep:web3"]
 near = []
-postgres_storage = ["sqlx"]
+postgres_storage = ["dep:sqlx"]
 near-indexer-explorer = []
-near-indexer-framework = ["near-indexer"]
+near-indexer-framework = ["dep:near-indexer"]
