--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -12,11 +12,9 @@ tracing-subscriber = "0.3.16"
 web3 = { version = "0.18.0", optional = true }
 syn = { version = "1.0.102", features = ["full"] }
 anyhow = "1.0.65"
-#near-jsonrpc-client = { version = "0.4.0", optional = true }
-#near-jsonrpc-primitives = { version = "0.15.0", optional = true }
-#near-primitives = { version = "0.15.0", optional = true }
 near-indexer = { git = "https://github.com/near/nearcore", optional = true }
 sqlx = { version = "0.6.2", optional = true, features = ["postgres", "runtime-tokio-native-tls", "json", "bigdecimal", "time", "offline"] }
+near-lake-framework = { version = "0.6.1", optional = true }
 
 num-traits = "0.2.15"
 borsh = "0.9.3"
@@ -29,9 +27,10 @@ serde_with = { version = "2.0.1", features = ["base64"] }
 reqwest = "0.11.13"
 
 [features]
-default = ["postgres_storage", "near", "near-indexer-framework"]
+default = ["postgres_storage", "near", "near-lake-framework"]
 evm = ["dep:web3"]
 near = []
 postgres_storage = ["dep:sqlx"]
 near-indexer-explorer = []
 near-indexer-framework = ["dep:near-indexer"]
+near-lake-framework = ["dep:near-lake-framework"]
