Completely restructure indexer
Split into two separate services: worker and REST API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [workspace]
 members = [
 #    "relayer-server",
-    "indexer",
+    "indexer-tx-storage",
+    "indexer-worker",
+    "indexer-api",
 ]
 default-members = [
-    "indexer",
+    "indexer-worker",
+    "indexer-api",
 ]
 
 [workspace.package]
