--- a/indexer-worker/Cargo.toml
+++ b/indexer-worker/Cargo.toml
@@ -24,9 +24,12 @@ near-indexer = { git = "https://github.com/near/nearcore", optional = true }
 near-lake-framework = { version = "0.6.1", optional = true }
 actix = { version = "0.13.0", optional = true }
 sqlx = { version = "0.6.2", optional = true, features = ["postgres", "runtime-tokio-native-tls", "json", "bigdecimal", "time", "offline"] }
+futures = "0.3.26"
+hex = "0.4.3"
+async-trait = "0.1.64"
 
 [features]
-default = []
+default = ["evm", "near", "near-lake-framework", "near-indexer-explorer", "near-indexer-framework"]
 evm = ["dep:web3"]
 near = []
 near-indexer-explorer = ["dep:sqlx"]
