--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ byteorder = "1"
 secp256k1 = "0.21.0"
 thiserror = "1.0.39"
 reqwest = "0.11.14"
-tower-http = { version = "0.3.5", features = ["trace"] }
+tower-http = { version = "0.3.5", features = ["trace", "cors"] }
 bs58 = "0.4.0"
 zeropool-tx = { git = "https://github.com/zeropoolnetwork/zeropool-tx" }
 
