--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ thiserror = "1.0.39"
 reqwest = "0.11.14"
 tower-http = { version = "0.3.5", features = ["trace", "cors"] }
 bs58 = "0.4.0"
-zeropool-tx = { version = "0.1.1" }
+libzeropool-rs = { git = "https://github.com/zeropoolnetwork/libzeropool-rs", features = ["multicore", "native", "kvdb-persy"] }
+zeropool-tx = { git = "https://github.com/zeropoolnetwork/zeropool-tx" }
 
 web3 = { version = "0.18.0", optional = true }
 waves-rust = { version = "0.2.4", optional = true }
@@ -49,6 +50,8 @@ evm_backend = ["dep:web3"]
 near_backend = ["dep:near-jsonrpc-client", "dep:near-jsonrpc-primitives", "dep:near-primitives", "dep:near-crypto"]
 waves_backend = ["dep:waves-rust"]
 substrate_backend = []
+groth16 = ["libzeropool-rs/groth16", "zeropool-tx/groth16"]
+plonk = ["libzeropool-rs/plonk", "zeropool-tx/plonk"]
 
 [dev-dependencies]
 tempfile = "3.3.0"
@@ -60,3 +63,9 @@ near-o11y = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/
 near-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
 near-indexer-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
 near-client-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
+parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
+fawkes-crypto = { git = "https://github.com/zeropoolnetwork/fawkes-crypto", branch = "fix/plonk-fixes" }
+libzeropool = { git = "https://github.com/zeropoolnetwork/libzeropool", branch = "feature/plonk-support" }
+
+[patch."https://github.com/privacy-scaling-explorations/halo2curves"]
+halo2curves = { git = "https://github.com/zeropoolnetwork/halo2curves", branch = "zeropool-near" }
